automatisation des tables CTI

--- a/PROD/CONF/CTI/load-dt_media_type.conf
+++ b/PROD/CONF/CTI/load-dt_media_type.conf
@@ -1,7 +1,7 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.name = "LOAD-DT_MEDIA_TYPE"
+flux.name = "LOAD_DT_MEDIA_TYPE"
 
 flux.has-date-processing = false
 
