--- a/PROD/CONF/CTI/load-dt_place.conf
+++ b/PROD/CONF/CTI/load-dt_place.conf
@@ -1,7 +1,7 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.name = "LOAD-DT_PLACE"
+flux.name = "LOAD_DT_PLACE"
 
 flux.has-date-processing = false
 
