--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -694,3 +694,544 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.PigScriptLauncher"}
     ]
   }
+
+
+//COLLECTE CTI
+
+crontasks +=
+  {
+    instanceId = "LOAD_IT_SM_RES_STATE_REASON_FACT",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-it-sm-res-state-reason-fact.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_IT_SM_STATE_FACT",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-it-sm-res-state-fact.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_IT_SM_RES_SESSION_FACT",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-it-sm-res-session_fact.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_IT_DT_INTERACTION_TYPE",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-it-dt-interaction-type.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_IT_DT_INTERACTION_RESOURCE_STATE",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-it-dt-interaction-resource-state.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_IT_DT_INTERACTION_DESCRIPTOR",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-it-dt-interaction-descriptor.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_IT_DT_GROUP",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-it-dt-group.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_IT_DT_DATE_TIME",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-it-dt-date-time.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_IT_DT_CTL_AUDIT_LOG",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-it-dt-ctl-audit-log.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_GLOB_GIDB_G_PARTY_V",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-glob-gidb-g-party-v.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_GLOB_GIDB_G_PARTY_HISTORY_V",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-glob-gidb-g-party-history-v.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_GLOB_GIDB_G_CALL_V",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-glob-gidb-g-call.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_RESOURCE_SKILL_FACT",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-ft-resource-skill-fact.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_RESOURCE_GROUP_FACT",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-ft-resource-group-fact.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_MEDIATION_SEGMENT_FACT",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-ft-mediation-segment-fact.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_IXN_RESOURCE_STATE_FACT",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-ft-ixn-resource-state-fact.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_IRF_USER_DATA_KEYS",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-ft-irf-user-data-keys.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_IRF_USER_DATA_CUST_1",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-ft-irf-user-data-cust-1.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_INTERACTION_RESOURCE_FACT",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-ft-interaction-resource-fact.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_FT_INTERACTION_FACT",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-ft-interaction-fact.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_DT_RESOURCE_GROUP_COMBINATION",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-dt_resource_group_combination.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_DT_REQUESTED_SKILL_COMBINATION",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-dt_requested_skill_combination.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_DT_REQUESTED_SKILL",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-dt_requested_skill.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_DT_PLACE",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-dt_place.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_DT_MEDIA_TYPE",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-dt_media_type.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_DT_EXP_DIM_RESOURCE",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-dt_exp_dim_resource.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_DT_STRATEGY",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-dt-strategy.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_DT_ROUTING_TARGET",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-dt-routing-target.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_DT_RESOURCE_STATE_REASON",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-dt-ressources_state_reason.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_DT_RESOURCE_STATE",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-dt-ressources_state.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+crontasks +=
+  {
+    instanceId = "LOAD_DT_TECHNICAL_DESCRIPTOR",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-dt-technical-descriptor.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+crontasks +=
+  {
+    instanceId = "LOAD_DT_USER_DATA_CUST_DIM_1",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-dt-user-data-cust-dim-1.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_DT_USER_DATA_CUST_DIM_2",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-dt-user-data-cust-dim-2.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_DT_USER_DATA_CUST_DIM_3",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-dt-user-data-cust-dim-3.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_DT_USER_DATA_CUST_DIM_4",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-dt-user-data-cust-dim-4.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+crontasks +=
+  {
+    instanceId = "LOAD_DT_USER_DATA_CUST_DIM_5",
+    cron = "30 15 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-dt-user-data-cust-dim-5.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
