--- a/PROD/CONF/CTI/load-dt_requested_skill.conf
+++ b/PROD/CONF/CTI/load-dt_requested_skill.conf
@@ -1,7 +1,7 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.name = "LOAD-DT_REQUESTED_SKILL"
+flux.name = "LOAD_DT_REQUESTED_SKILL"
 
 flux.has-date-processing = false
 
