correctionn du probleme de LOAD_IT_DT_INTERACTION_TYPE

--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -758,19 +758,19 @@ crontasks +=
   }
 
 
-crontasks +=
-  {
-    instanceId = "LOAD_IT_DT_INTERACTION_RESOURCE_STATE",
-    cron = "30 15 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-it-dt-interaction-resource-state.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_IT_DT_INTERACTION_RESOURCE_STATE",
+//    cron = "30 15 */1 * * ?",
+//    configFile = "/PROD/CONF/CTI/load-it-dt-interaction-resource-state.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 crontasks +=
@@ -983,19 +983,19 @@ crontasks +=
   }
 
 
-crontasks +=
-  {
-    instanceId = "LOAD_FT_INTERACTION_FACT",
-    cron = "30 15 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-ft-interaction-fact.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "55 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_FT_INTERACTION_FACT",
+//    cron = "30 15 */1 * * ?",
+//    configFile = "/PROD/CONF/CTI/load-ft-interaction-fact.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "55 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 
 crontasks +=
