--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -410,21 +410,37 @@ crontasks +=
 
 // MONITORING
 
-// CALCUL DES FICHIERS MANQUANTS
-//crontasks +=
-//  {
-//    instanceId = "COMPUTE_MISSING_FILES",
-//    cron = "0 0 7 * * ?",
-//    configFile = "/PROD/CONF/MONITORING/compute_missing_files.conf",
-//    taskType = "HIVE"
-//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-//    timeout = "30 minutes"
-//    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-//    ]
-//  }
-//
+// CALCUL DES FICHIERS MANQUANTS IN
+crontasks +=
+  {
+    instanceId = "COMPUTE_IN_ZTE_MISSING_FILES",
+    cron = "* 0-10 */1 * * ?",
+    configFile = "/PROD/CONF/MONITORING/compute_in_zte_missing_files.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+
+// CALCUL DES FICHIERS MANQUANTS OTHERS
+crontasks +=
+  {
+    instanceId = "COMPUTE_OTHERS_MISSING_FILES",
+    cron = "* 10-20 */1 * * ?",
+    configFile = "/PROD/CONF/MONITORING/compute_in_zte_missing_files.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "60 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
 //// CALCUL DES FICHIERS COMPUTE_FT_DAILY_STATUS
 crontasks +=
   {
