New config for subs_streaming catchup

--- a/PROD/CONF/STREAMING/earliest-stream-calc-fta-subscription.conf
+++ b/PROD/CONF/STREAMING/earliest-stream-calc-fta-subscription.conf
@@ -47,7 +47,7 @@ flux.input-schema += {"field": "original_file_size", "type": "integer"}
 flux.input-schema += {"field": "original_file_line_count", "type": "integer"}
 
 flux.separator = "\\|"
-flux.temp-table-name = "in_zte_subscription_stream"
+flux.temp-table-name = "e_in_zte_subscription_stream"
 
 flux.has-watermark = "true"
 flux.watermark-eventtime-column = "createddate"
@@ -62,11 +62,11 @@ flux.window-startTime = "0 second"
 flux.streaming-output-mode = "update"
 flux.streaming-trigger-time = "100 seconds"
 
-flux.stream-query = "/PROD/SCRIPTS/STREAMING/stream-calc-ft-a-subscription.hql"
+flux.stream-query = "/PROD/SCRIPTS/STREAMING/earliest-stream-calc-ft-a-subscription.hql"
 flux.stream-query-name = "EARLIEST_STREAMING_CALC_FT_A_SUBS"
 
 flux.jdbc.output-url = "jdbc:mysql://172.21.66.236/monitoring_streaming?allowMultiQueries=true&useUnicode=true&serverTimezone=UTC"
 flux.jdbc.output-username = "user_mon"
 flux.jdbc.output-password = "user_mon"
 flux.jdbc.output-driver = "com.mysql.jdbc.Driver"
-flux.jdbc.output-db-table = "subs_activity_staging"
+flux.jdbc.output-db-table = "catchup_subs_staging"
