--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -983,19 +983,19 @@ crontasks +=
   }
 
 
-//crontasks +=
-//  {
-//    instanceId = "LOAD_FT_INTERACTION_FACT",
-//    cron = "30 45 */1 * * ?",
-//    configFile = "/PROD/CONF/CTI/load-ft-interaction-fact.conf",
-//    taskType = "HIVE"
-//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-//    timeout = "55 minutes"
-//    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-//    ]
-//  }
+crontasks +=
+  {
+    instanceId = "LOAD_FT_INTERACTION_FACT",
+    cron = "30 45 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-ft-interaction-fact.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
 
 
 crontasks +=
