--- a/PROD/CONF/CTI/load-dt-user-data-cust-dim-1.conf
+++ b/PROD/CONF/CTI/load-dt-user-data-cust-dim-1.conf
@@ -29,4 +29,4 @@ flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 flux.hive.extra-conf += "--hivevar date_offset=3"
 flux.hive.extra-conf += "--hivevar cdr_type=CTI_USER_DATA_CUST_DIM_1"
 flux.hive.extra-conf += "--hivevar file_date_index=-12"
-flux.hive.extra-conf += "--hivevar tt_table_name=CTI.DT_USER_DATA_CUST_DIM_1"
+flux.hive.extra-conf += "--hivevar tt_table_name=CTI.TT_DT_USER_DATA_CUST_DIM_1"
