--- a/PROD/CONF/CTI/load-dt-routing-target.conf
+++ b/PROD/CONF/CTI/load-dt-routing-target.conf
@@ -31,4 +31,4 @@ flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 flux.hive.extra-conf += "--hivevar date_offset=3"
 flux.hive.extra-conf += "--hivevar cdr_type=CTI_ROUTING_TARGET"
 flux.hive.extra-conf += "--hivevar file_date_index=-12"
-flux.hive.extra-conf += "--hivevar tt_table_name=CTI.DT_ROUTING_TARGET"
+flux.hive.extra-conf += "--hivevar tt_table_name=CTI.TT_DT_ROUTING_TARGET"
