--- a/PROD/CONF/CTI/load-dt-technical-descriptor.conf
+++ b/PROD/CONF/CTI/load-dt-technical-descriptor.conf
@@ -31,4 +31,4 @@ flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 flux.hive.extra-conf += "--hivevar date_offset=3"
 flux.hive.extra-conf += "--hivevar cdr_type=CTI_TECHNICAL_DESCRIPTOR"
 flux.hive.extra-conf += "--hivevar file_date_index=-12"
-flux.hive.extra-conf += "--hivevar tt_table_name=CTI.DT_TECHNICAL_DESCRIPTOR"
+flux.hive.extra-conf += "--hivevar tt_table_name=CTI.TT_DT_TECHNICAL_DESCRIPTOR"
