--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -367,7 +367,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_FT_EDR_PRPD_EQT",
-    cron = "0 30 6 * * ?",
+    cron = "0 0 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-ft-edr-prpd-eqt.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -382,7 +382,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_FT_A_EDR_PRPD_EQT",
-    cron = "0 35 7 * * ?",
+    cron = "0 35 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-ft-a-edr-prpd-eqt.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -397,7 +397,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_FT_PRPD_EQT",
-    cron = "0 40 7 * * ?",
+    cron = "0 45 */1 * * ?",
     configFile = "/PROD/CONF/IN_ZTE/EQUATION_PREPAYEE/load-ft-prpd-eqt.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
