update compute missing_file conf

--- a/PROD/CONF/MONITORING/compute_extract_missing_files.conf
+++ b/PROD/CONF/MONITORING/compute_extract_missing_files.conf
@@ -19,7 +19,7 @@ flux.has-post-queries = false
 
 flux.exec-query.execution.mode = "JDBC"
 
-flux.inline.exec-queries += "DELETE FROM MISSING_FILES WHERE ORIGINAL_FILE_DATE = '###SLICE_VALUE###' AND TABLE_SOURCE='IN'"
+flux.inline.exec-queries += "DELETE FROM MISSING_FILES WHERE ORIGINAL_FILE_DATE = '###SLICE_VALUE###' AND TABLE_SOURCE='IN' AND FLUX_TYPE='EXTRACT'"
 flux.inline.exec-queries += "add jar hdfs:///PROD/UDF/hive-udf-1.0.jar"
 flux.inline.exec-queries += "create temporary function GENERATE_SEQUENCE_FROM_INTERVALE as 'cm.orange.bigdata.udf.GenerateSequenceFromIntervale'"
 
