--- a/PROD/CONF/CTI/load-ft-interaction-fact.conf
+++ b/PROD/CONF/CTI/load-ft-interaction-fact.conf
@@ -17,7 +17,7 @@ flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 
 flux.has-pre-queries = false
 flux.has-exec-queries = true
-flux.has-post-queries = true
+flux.has-post-queries = false
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/CTI/EXP_FACT_INTERACTION_FACT/insert_into_dt_interaction_fact.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
