--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -747,7 +747,7 @@ crontasks +=
   {
     instanceId = "LOAD_IT_DT_INTERACTION_TYPE",
     cron = "30 15 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-it-dt-interaction-type.conf",
+    configFile = "/PROD/CONF/CTI/load-dt-interaction-type.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "55 minutes"
@@ -758,26 +758,26 @@ crontasks +=
   }
 
 
-//crontasks +=
-//  {
-//    instanceId = "LOAD_IT_DT_INTERACTION_RESOURCE_STATE",
-//    cron = "30 20 */1 * * ?",
-//    configFile = "/PROD/CONF/CTI/load-it-dt-interaction-resource-state.conf",
-//    taskType = "HIVE"
-//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-//    timeout = "55 minutes"
-//    extraTaskParams : [
-//      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
-//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-//    ]
-//  }
+crontasks +=
+  {
+    instanceId = "LOAD_IT_DT_INTERACTION_RESOURCE_STATE",
+    cron = "30 20 */1 * * ?",
+    configFile = "/PROD/CONF/CTI/load-dt-interaction-resource-state.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "55 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
 
 
 crontasks +=
   {
     instanceId = "LOAD_IT_DT_INTERACTION_DESCRIPTOR",
     cron = "30 25 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-it-dt-interaction-descriptor.conf",
+    configFile = "/PROD/CONF/CTI/load-dt-interaction-descriptor.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "55 minutes"
@@ -792,7 +792,7 @@ crontasks +=
   {
     instanceId = "LOAD_IT_DT_GROUP",
     cron = "30 30 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-it-dt-group.conf",
+    configFile = "/PROD/CONF/CTI/load-dt-group.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "55 minutes"
@@ -807,7 +807,7 @@ crontasks +=
   {
     instanceId = "LOAD_IT_DT_DATE_TIME",
     cron = "30 35 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-it-dt-date-time.conf",
+    configFile = "/PROD/CONF/CTI/load-dt-date-time.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "55 minutes"
@@ -822,7 +822,7 @@ crontasks +=
   {
     instanceId = "LOAD_IT_DT_CTL_AUDIT_LOG",
     cron = "30 40 */1 * * ?",
-    configFile = "/PROD/CONF/CTI/load-it-dt-ctl-audit-log.conf",
+    configFile = "/PROD/CONF/CTI/load-dt-ctl-audit-log.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "55 minutes"
