--- a/PROD/CONF/CTI/load-dt-interaction-resource-state.conf
+++ b/PROD/CONF/CTI/load-dt-interaction-resource-state.conf
@@ -17,9 +17,9 @@ flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 
 flux.has-pre-queries = false
 flux.has-exec-queries = true
-flux.has-post-queries = true
+flux.has-post-queries = false
 
-flux.exec-queries += "/PROD/SCRIPTS/IT/CTI/insert_into_it_dt_interaction_resource_state.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/CTI/insert_into_dt_interaction_resource_state.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
