--- a/PROD/CONF/CTI/load-ft-irf-user-data-keys.conf
+++ b/PROD/CONF/CTI/load-ft-irf-user-data-keys.conf
@@ -17,7 +17,7 @@ flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 
 flux.has-pre-queries = false
 flux.has-exec-queries = true
-flux.has-post-queries = true
+flux.has-post-queries = false
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/CTI/EXP_FACT_IRF_USER_DATA_KEYS/insert_into_ft_irf_user_data_keys.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
