--- a/PROD/CONF/CTI/load-ft-mediation-segment-fact.conf
+++ b/PROD/CONF/CTI/load-ft-mediation-segment-fact.conf
@@ -17,15 +17,15 @@ flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 
 flux.has-pre-queries = false
 flux.has-exec-queries = true
-flux.has-post-queries = true
+flux.has-post-queries = false
 
-flux.exec-queries += "/PROD/SCRIPTS/IT/CTI/EXP_FACT_RESOURCE_GROUP_FACT/insert_into_ft_resource_group_fact.hql"
+flux.exec-queries += "/PROD/SCRIPTS/IT/CTI/EXP_FACT_MEDIATION_SEGMENT_FACT/insert_into_ft_mediation_segment_fact.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
 
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition=true"
 flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 flux.hive.extra-conf += "--hivevar date_offset=3"
-flux.hive.extra-conf += "--hivevar cdr_type=CTI_EXP_FACT_RESOURCE_GROUP_FACT"
+flux.hive.extra-conf += "--hivevar cdr_type=CTI_EXP_FACT_MEDIATION_SEGMENT_FACT"
 flux.hive.extra-conf += "--hivevar file_date_index=-12"
 flux.hive.extra-conf += "--hivevar tt_table_name=CTI.TT_MEDIATION_SEGMENT_FACT"
