--- a/PROD/CONF/CTI/load-ft-resource-skill-fact.conf
+++ b/PROD/CONF/CTI/load-ft-resource-skill-fact.conf
@@ -6,8 +6,8 @@ flux.name = "LOAD_FT_RESOURCE_SKILL_FACT"
 flux.has-date-processing = false
 
 flux.hdfs.move-to-tt = true
-flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/CTI/EXP_FACT_RESOURCE_SKILL_FACT/EXP_FACT_RESOURCE_SKILL_FACT__*"
-flux.hdfs.dest-temp-tt-dir = "/PROD/TT/CTI/EXP_FACT_RESOURCE_SKILL_FACT"
+flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/CTI/EXP_FACT_RESOURCE_SKILL_FACT_/EXP_FACT_RESOURCE_SKILL_FACT__*"
+flux.hdfs.dest-temp-tt-dir = "/PROD/TT/CTI/EXP_FACT_RESOURCE_SKILL_FACT_"
 
 flux.hdfs.move-to-arch = true
 flux.hdfs.src-arch-dir-regex = "/PROD/TT/CTI/EXP_FACT_RESOURCE_SKILL_FACT_/*"
@@ -17,7 +17,7 @@ flux.hdfs.dest.has-sub-dir-extractor-regex = "(\\d{8})"
 
 flux.has-pre-queries = false
 flux.has-exec-queries = true
-flux.has-post-queries = true
+flux.has-post-queries = false
 
 flux.exec-queries += "/PROD/SCRIPTS/IT/CTI/EXP_FACT_RESOURCE_SKILL_FACT/insert_into_ft_resource_skill_fact.hql"
 flux.exec-queries += "/PROD/SCRIPTS/IT/insert_into_received_files.hql"
