correction de la completude EMERGENCY DATA

--- a/PROD/CONF/IN_ZTE/FT/load-ft-emergency-data.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-emergency-data.conf
@@ -20,6 +20,8 @@ flux.has-post-queries = true
 flux.exec-query.execution.mode = "JDBC"
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/EMERGENCY_DATA/prequery_ft_emergency_data.hql"
+flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_completude.hql"
+
 
 flux.inline.exec-queries += "set hive.vectorized.execution.enabled=true"
 flux.inline.exec-queries += "set hive.vectorized.execution.reduce.enabled=true"
@@ -36,12 +38,20 @@ flux.hive.extra-conf += "--hiveconf hive.exec.dynamic.partition.mode=nonstrict"
 flux.hive.extra-conf += "--hiveconf hive.enforce.bucketing=true"
 
 
+flux.hive.extra-conf += "--hivevar cdr_type=ZTE_ED_CDR"
+flux.hive.extra-conf += "--hivevar it_table_name=CDR.IT_ZTE_EMERGENCY_DATA"
+flux.hive.extra-conf += "--hivevar it_partition_column=TRANSACTION_DATE"
+flux.hive.extra-conf += "--hivevar date_offset=3"
+flux.hive.extra-conf += "--hivevar flux_type=PREPAID"
+
+
 
 flux.hive.extra-conf += "--hivevar table_type=FT"
 flux.hive.extra-conf += "--hivevar table_name=FT_EMERGENCY_DATA"
 flux.hive.extra-conf += "--hivevar insert_date_column=INSERT_DATE"
 flux.hive.extra-conf += "--hivevar database_table_name=MON.FT_EMERGENCY_DATA"
 flux.hive.extra-conf += "--hivevar table_partition=TRANSACTION_DATE"
+
 
 
 
