--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -100,7 +100,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_DATA_POST",
-    cron = "0 5-59/12 * * * ?",
+    cron = "0 */11 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-data-post.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
@@ -194,7 +194,7 @@ crontasks +=
 crontasks +=
   {
     instanceId = "LOAD_IT_VOICE_SMS_POST",
-    cron = "0 5-59/10 * * * ?",
+    cron = "0 */11 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-voice_sms_post.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
