Ajout du spool de global activity

--- a/PROD/CONF/NOTIFICATION/notif_revenue.conf
+++ b/PROD/CONF/NOTIFICATION/notif_revenue.conf
@@ -7,6 +7,7 @@ flux.log-level = "ERROR"
 flux.name = "NOTIFICATION_REVENUE_IN" // Required: Corresponds to the instance ID
 
 flux.has-date-processing = true
+flux.spool-file-prefix="REVENUE_IN_"
 
 flux.slice-value-type = "DAILY" // Possible values are // QUARTER-HOURLY ,HALF-HOURLY ,HOURLY (YYYYMMDD HH24), DAILY (YYYYMMDD), MONTHLY (YYYYMM), YEARLY (YYYYMM)
 flux.slice-begin-value = -14
