--- a/PROD/CONF/IN_ZTE/FT/load-ft-data.conf
+++ b/PROD/CONF/IN_ZTE/FT/load-ft-data.conf
@@ -17,7 +17,8 @@ flux.has-pre-queries = true
 flux.has-exec-queries = true
 flux.has-post-queries = true
 
-flux.exec-query.execution.mode = "JDBC"
+flux.pre-exec-query.execution.mode = "HIVE"
+flux.exec-query.execution.mode = "HIVE"
 
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/DATA/prequery_ft_data.hql"
 flux.pre-exec-queries += "/PROD/SCRIPTS/FT/IN_ZTE/prequery_completude.hql"
