Ajout de la logique du revenu marketing

--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -472,6 +472,21 @@ crontasks +=
     ]
   }
 
+//// CALCUL DU REVENUE MARKETING POUR NOTIF
+crontasks +=
+  {
+    instanceId = "COMPUTE_REVENUE_MARKETING",
+    cron = "0 55 */1 * * ?",
+    configFile = "/PROD/CONF/NOTIFICATION/revenu_marketing.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "30 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
 // COMPUTE STATISTICS
 crontasks +=
   {
