--- a/PROD/CONF/STREAMING/stream-calc-fta-recharge.conf
+++ b/PROD/CONF/STREAMING/stream-calc-fta-recharge.conf
@@ -10,7 +10,7 @@ flux.streaming-backpressure-maxRate = 30000
 spark.streaming.kafka.maxRatePerPartition = 1000
 
 flux.input-type = "KAFKA"
-flux.output-type = "CONSOLE"
+flux.output-type = "JDBC"
 
 flux.input-file-format = "CSV"
 
