update pig configs

--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -683,9 +683,9 @@ crontasks +=
 // Archivage des données IN_ZTE + LOGS NIFI
 crontasks +=
   {
-    instanceId = "ARCH_ZTE",
-    cron = "0 35 */3 * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/arch-in-zte.conf",
+    instanceId = "PIG_COMPRESS_ARCH",
+    cron = "0 35 */6 * * ?",
+    configFile = "/PROD/CONF/PIG/pig-compress-arch.conf",
     taskType = "PIG"
     taskLauncher = ${PIG_SCRIPT_LAUNCHER}
     timeout = "200 minutes"
