--- a/PROD/CONF/CTI/load-dt-ressources-state.conf
+++ b/PROD/CONF/CTI/load-dt-ressources-state.conf
@@ -6,7 +6,7 @@ flux.name = "LOAD_DT_RESOURCE_STATE"
 flux.has-date-processing = false
 
 flux.hdfs.move-to-tt = true
-flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/CTI/EXP_DIM_RESOURCE_STATE/*RESOURCE_STATE*"
+flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/CTI/EXP_DIM_RESOURCE_STATE/EXP_DIM_RESOURCE_STATE*"
 flux.hdfs.dest-temp-tt-dir = "/PROD/TT/CTI/EXP_DIM_RESOURCE_STATE"
 
 flux.hdfs.move-to-arch = true
