--- a/PROD/CONF/CTI/load-dt-strategy.conf
+++ b/PROD/CONF/CTI/load-dt-strategy.conf
@@ -6,7 +6,7 @@ flux.name = "LOAD_DT_STRATEGY"
 flux.has-date-processing = false
 
 flux.hdfs.move-to-tt = true
-flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/CTI/EXP_DIM_STRATEGY/*STRATEGY*"
+flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/CTI/EXP_DIM_STRATEGY/EXP_DIM_STRATEGY*"
 flux.hdfs.dest-temp-tt-dir = "/PROD/TT/CTI/EXP_DIM_STRATEGY"
 
 flux.hdfs.move-to-arch = true
