--- a/PROD/CONF/CTI/load-dt-technical-descriptor.conf
+++ b/PROD/CONF/CTI/load-dt-technical-descriptor.conf
@@ -6,7 +6,7 @@ flux.name = "LOAD_DT_TECHNICAL_DESCRIPTOR"
 flux.has-date-processing = false
 
 flux.hdfs.move-to-tt = true
-flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/CTI/EXP_DIM_TECHNICAL_DESCRIPTOR/*TECHNICAL_DESCRIPTOR*"
+flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/CTI/EXP_DIM_TECHNICAL_DESCRIPTOR/EXP_DIM_TECHNICAL_DESCRIPTOR*"
 flux.hdfs.dest-temp-tt-dir = "/PROD/TT/CTI/EXP_DIM_TECHNICAL_DESCRIPTOR"
 
 flux.hdfs.move-to-arch = true
