--- a/PROD/CONF/CTI/load-dt-user-data-cust-dim-1.conf
+++ b/PROD/CONF/CTI/load-dt-user-data-cust-dim-1.conf
@@ -6,7 +6,7 @@ flux.name = "LOAD_DT_USER_DATA_CUST_DIM_1"
 flux.has-date-processing = false
 
 flux.hdfs.move-to-tt = true
-flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/CTI/EXP_DIM_USER_DATA_CUST_DIM_1/*USER_DATA_CUST_DIM_1*"
+flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/CTI/EXP_DIM_USER_DATA_CUST_DIM_1/EXP_DIM_USER_DATA_CUST_DIM_1*"
 flux.hdfs.dest-temp-tt-dir = "/PROD/TT/CTI/EXP_DIM_USER_DATA_CUST_DIM_1"
 
 flux.hdfs.move-to-arch = true
