--- a/PROD/CONF/CTI/load-dt-ressources-state-reason.conf
+++ b/PROD/CONF/CTI/load-dt-ressources-state-reason.conf
@@ -6,7 +6,7 @@ flux.name = "LOAD_DT_RESOURCE_STATE_REASON"
 flux.has-date-processing = false
 
 flux.hdfs.move-to-tt = true
-flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/CTI/EXP_DIM_RESOURCE_STATE_REASON/*RESOURCE_STATE_REASON*"
+flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/CTI/EXP_DIM_RESOURCE_STATE_REASON/EXP_DIM_RESOURCE_STATE_REASON*"
 flux.hdfs.dest-temp-tt-dir = "/PROD/TT/CTI/EXP_DIM_RESOURCE_STATE_REASON"
 
 flux.hdfs.move-to-arch = true
