--- a/PROD/CONF/CTI/load-dt-routing-target.conf
+++ b/PROD/CONF/CTI/load-dt-routing-target.conf
@@ -6,7 +6,7 @@ flux.name = "LOAD_DT_ROUTING_TARGET"
 flux.has-date-processing = false
 
 flux.hdfs.move-to-tt = true
-flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/CTI/EXP_DIM_ROUTING_TARGET/*ROUTING_TARGET*"
+flux.hdfs.src-temp-tt-dir-regex = "/PROD/RAW/CTI/EXP_DIM_ROUTING_TARGET/EXP_DIM_ROUTING_TARGET*"
 flux.hdfs.dest-temp-tt-dir = "/PROD/TT/CTI/EXP_DIM_ROUTING_TARGET"
 
 flux.hdfs.move-to-arch = true
