--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -264,19 +264,19 @@ crontasks +=
 //--###**************************************#####---
 
 // Calcul KPI OM TRANSACTIONS
-crontasks +=
-  {
-    instanceId = "LOAD_KPI_OM_TRANSACTIONS",
-    cron = "0 5 */1 * * ?",
-    configFile = "/PROD/CONF/OM/load-kpi-om-transactions.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "65 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "LOAD_KPI_OM_TRANSACTIONS",
+//    cron = "0 5 */1 * * ?",
+//    configFile = "/PROD/CONF/OM/load-kpi-om-transactions.conf",
+//    taskType = "HIVE"
+//    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+//    timeout = "65 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+//    ]
+//  }
 
 //--###**************************************#####---
 //--###        CHARGEMENT & CALCULS MSC
