--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -681,19 +681,19 @@ crontasks +=
 
 
 // Archivage des données IN_ZTE + LOGS NIFI
-crontasks +=
-  {
-    instanceId = "PIG_COMPRESS_ARCH",
-    cron = "0 35 */6 * * ?",
-    configFile = "/PROD/CONF/PIG/pig-compress-arch.conf",
-    taskType = "PIG"
-    taskLauncher = ${PIG_SCRIPT_LAUNCHER}
-    timeout = "200 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.PigScriptLauncher"}
-    ]
-  }
+//crontasks +=
+//  {
+//    instanceId = "PIG_COMPRESS_ARCH",
+//    cron = "0 35 */6 * * ?",
+//    configFile = "/PROD/CONF/PIG/pig-compress-arch.conf",
+//    taskType = "PIG"
+//    taskLauncher = ${PIG_SCRIPT_LAUNCHER}
+//    timeout = "200 minutes"
+//    extraTaskParams : [
+//      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+//      , {"param" : "-main cm.orange.processor.PigScriptLauncher"}
+//    ]
+//  }
 
 
 //COLLECTE CTI
