Altered IN ZTE POST

--- a/PROD/CONF/IN_ZTE/IT/load-it-data-post.conf
+++ b/PROD/CONF/IN_ZTE/IT/load-it-data-post.conf
@@ -1,7 +1,7 @@
 flux.yarn.queue = "PROD"
 flux.log-level = "ERROR"
 
-flux.name = "LOAD_IT_DATA_POST"
+flux.name = "LOAD_IT_DATA_POST_v02"
 
 flux.has-date-processing = false
 
