--- a/PROD/CONF/collect-cron-tasks.conf
+++ b/PROD/CONF/collect-cron-tasks.conf
@@ -64,6 +64,36 @@ crontasks +=
     ]
   }
 
+// Chargement de IN ZTE DATA_POST
+crontasks +=
+  {
+    instanceId = "LOAD_IT_DATA_POST_v02",
+    cron = "0 0-20/10 * * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-data-post.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "50 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
+// Chargement de IN ZTE VOICE_SMS_POST
+crontasks +=
+  {
+    instanceId = "LOAD_IT_VOICE_SMS_POST_v02",
+    cron = "0 25-50/10 * * * ?",
+    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-voice_sms_post.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "50 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
 // Chargement de IN ZTE ADJUSTMENT
 crontasks +=
   {
@@ -86,22 +116,6 @@ crontasks +=
     instanceId = "LOAD_IT_BALANCE_RESET",
     cron = "0 */10 * * * ?",
     configFile = "/PROD/CONF/IN_ZTE/IT/load-it-balance_reset.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "50 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
-
-// Chargement de IN ZTE DATA_POST
-crontasks +=
-  {
-    instanceId = "LOAD_IT_DATA_POST",
-    cron = "0 */11 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-data-post.conf",
     taskType = "HIVE"
     taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
     timeout = "50 minutes"
@@ -189,22 +203,6 @@ crontasks +=
       , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
     ]
   }
-
-// Chargement de IN ZTE VOICE_SMS_POST
-crontasks +=
-  {
-    instanceId = "LOAD_IT_VOICE_SMS_POST",
-    cron = "0 */11 * * * ?",
-    configFile = "/PROD/CONF/IN_ZTE/IT/load-it-voice_sms_post.conf",
-    taskType = "HIVE"
-    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
-    timeout = "50 minutes"
-    extraTaskParams : [
-      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
-      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
-    ]
-  }
-
 
 
 /////////////////////////////////////////////////////
