Removed noisy ARCH dirs

--- a/PROD/CONF/PIG/pig-compress-arch.conf
+++ b/PROD/CONF/PIG/pig-compress-arch.conf
@@ -46,7 +46,7 @@ flux.source-dirs+="/PROD/ARCH/OM/SUBSCRIBERS/"
 flux.source-dirs+="/PROD/ARCH/OM/TRANSACTIONS/"
 
 // LES LOGS
-flux.source-dirs+="/PROD/ARCH/NIFI_BULLETINS/"
+//flux.source-dirs+="/PROD/ARCH/NIFI_BULLETINS/"
 flux.source-dirs+="/PROD/ARCH/NIFI_LOGS/"
 
 //P2P
@@ -61,7 +61,7 @@ flux.source-dirs+="/PROD/ARCH/ZEBRA/ZEBRA_MASTER/"
 flux.source-dirs+="/PROD/ARCH/ZEBRA/ZEBRA_TRANSAC/"
 
 //MVAS
-flux.source-dirs+="/PROD/ARCH/MVAS/"
+//flux.source-dirs+="/PROD/ARCH/MVAS/"
 
 //BDI
 flux.source-dirs+="/PROD/ARCH/BDI/"
