programmation du sms usage

--- a/PROD/CONF/compute-cron-tasks.conf
+++ b/PROD/CONF/compute-cron-tasks.conf
@@ -487,6 +487,21 @@ crontasks +=
     ]
   }
 
+//// CALCUL DU SMS USAGE
+crontasks +=
+  {
+    instanceId = "COMPUTE_SMS_USAGE",
+    cron = "0 55 */1 * * ?",
+    configFile = "/PROD/CONF/NOTIFICATION/sms_usage.conf",
+    taskType = "HIVE"
+    taskLauncher = ${HIVE_SCRIPT_LAUNCHER}
+    timeout = "30 minutes"
+    extraTaskParams : [
+      {"param" : "/opt/app/cronmanager/bin/cronmanager -J-Xmx512m"}
+      , {"param" : "-main cm.orange.processor.HiveScriptLauncher"}
+    ]
+  }
+
 // COMPUTE STATISTICS
 crontasks +=
   {
